--- a/style.css
+++ b/style.css
@@ -49,3 +49,19 @@ button{
     color: #8D9AC6;
     font-weight: bolder;
 }
+footer a{
+    font-size: large;
+    margin: 0.5rem;
+    text-decoration: none;
+    color: #8D9AC6;
+    font-weight: bolder;
+}
+footer{
+   position: fixed;
+  background-color: #0B0F27;
+ padding: 1rem;
+ right: 0;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+}
